# ComfyUI-Gemini

./: GeminiAPINode.py  Gemini_API_Key.py  README.md  __init__.py  config.json  pyproject.toml  requirements.txt
Gemini_workflows/: All-in-One LoRa Training【Zho】.json  Gemini 1.5 Pro + Stable Diffusion + ComfyUI = DALL·3 【Zho】.json  Gemini-pro Chatbot【Zho】.json  Gemini-pro-vision【Zho】.json  Gemini-pro-vision【Zho】2.json  Gemini-pro【Zho】.json
js/: GeminiAPINode.js
